--- a/biblioteka13263/Views/Shared/_Layout.cshtml
+++ b/biblioteka13263/Views/Shared/_Layout.cshtml
@@ -25,7 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
                         </li>
-                  
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
