--- a/biblioteka13263/Views/Book/Index.cshtml
+++ b/biblioteka13263/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<biblioteka13263.Models.Book>
+﻿@model IEnumerable<biblioteka13263.Models.BookView>
 
 @{
     ViewData["Title"] = "Index";
@@ -19,16 +19,13 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Author)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IsAvilible)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.WhenAvilable)
+                @Html.DisplayNameFor(model => model.Genres)
             </th>
             <th></th>
         </tr>
@@ -43,21 +40,18 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Author)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsAvilible)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.WhenAvilable)
+                @Html.DisplayFor(modelItem => item.Genres)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Details", "Details", new {id=item.Id  }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
