--- a/biblioteka13263/Views/Book/Details.cshtml
+++ b/biblioteka13263/Views/Book/Details.cshtml
@@ -1,7 +1,17 @@
-﻿@model biblioteka13263.Models.BookView
+﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Http;
+@using Microsoft.AspNetCore.Identity
+
+@inject  UserManager<User> userManager;
+@inject IHttpContextAccessor _context;
+@model biblioteka13263.Models.BookView
 
 @{
     ViewData["Title"] = "Details";
+    var user =await userManager.GetUserAsync(_context.HttpContext.User);
+    var administrator = false;
+    if (user != null)
+        administrator = user.Administrator;
 }
 
 <h1>Details</h1>
@@ -53,17 +63,14 @@
             @Html.DisplayFor(model => model.WhenAvilable)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Client)
+            @Html.DisplayNameFor(model => model.ClientEmail)
         </dt>
         <dd class="col-sm-10">
-            @if (Model.Client != null)
+            @if (Model.ClientEmail != "")
             {
                 <span style="color: red">
-                @Html.DisplayFor(model => model.Client.Name)
-                
-                     
-                
-                @Html.DisplayFor(model => model.Client.Surname)
+                @Html.DisplayFor(model => model.ClientEmail)
+          
                 </span>
             }
             else{ <span>  -</span>}
@@ -71,7 +78,14 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Delete" asp-route-id="@Model?.Id">Delete</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (administrator){
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> <span >|</span>
+    <a asp-action="Delete" asp-route-id="@Model?.Id">Delete</a> <span >|</span>
+    }
+    @if (Model.IsAvilible&&user!=null)
+    {
+        <a asp-action="Borrow" asp-route-id="@Model?.Id">Borrow</a>
+    }
+    |<a asp-action="Index">Back to List</a>
+
 </div>
