--- a/biblioteka13263/Views/Shared/_Layout.cshtml
+++ b/biblioteka13263/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Security.Claims
 @{
-    var userId = User.FindFirstValue(ClaimTypes.NameIdentifier); // Directly getting the user ID
+    var userId = User.FindFirstValue(ClaimTypes.NameIdentifier); 
 }
 <!DOCTYPE html>
 <html lang="en">
